# MatematicasDiscretasTarea

./: .gitignore  CMakeLists.txt  README.md  main
include/: cola.h  dijkstra.h  grafo.h  recorrido.h  struct.h
src/: cola.c  dijkstra.c  euleriano.txt  grafo.c  grafo1.txt  main  main.c  planar.txt  recorrido.c
